kubernetes/overlays/apps/infra/applications/awx/network-policies/allow-ingress-controller.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webserivce-ingress-controller
spec:
  podSelector:
    matchLabels:
      app: awx
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          role: ingress-controller
      ports:
      - protocol: TCP
        port: 8181
